# Ali_API_challenge

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
api_challenge/: asgi.py  settings.py  urls.py  wsgi.py
docs/editable_diagrams/: Job_offers_consultation_sequence_diag.drawio  classes_diag.drawio
jobs/: models.py  permissions.py  serializers.py  views.py
jobs/migrations/: 0001_initial.py  0002_joboffer_owner_joboffer_published.py  0003_rename_published_joboffer_is_published.py
users/: models.py  permissions.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_managers_customuser_date_created_and_more.py  0003_candidate_recruiter.py  0004_customuser_profile.py  0005_rename_profile_picture_customuser_picture_and_more.py
